# Pokemon

./: .gitignore  AttackFunctions.h  CMakeLists.txt  Data.cpp  Data.h  GeneralFunctions.h  Item.cpp  Item.h  ItemFunctions.h  Items.cpp  Items.h  Move.cpp  Move.h  MoveList.h  Moves.cpp  Moves.h  PhysicalTypes.h  Pokemon.cpp  Pokemon.h  README.md  Route1.tiled-session  SpecialTypes.h  Trainer.cpp  Trainer.h  TypeChart.h  main.cpp  main.h
Data/: SaveData.txt
assets/Tiled/Tilemaps/: NuvemaTown.tmx
assets/Tiled/Tilesets/: BigTree.tsx  Dirt.tsx  Grass.tsx  House.tsx  TallGrass.tsx
assets/data/Item/: BattleItems.xml  ResourceItems.xml  StatusItems.xml
assets/data/Player/: Player.xml
assets/data/Pokemon/: Braviary.xml  Carracosta.xml  Emboar.xml  Excadrill.xml  Hydreigon.xml  Samurott.xml  Seismitoad.xml  Serperior.xml  Stoutland.xml  Zebstrika.xml
cmake/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  Pokemon.cbp  PokemonBattle.cbp  build.ninja  cmake_install.cmake
docs/: README.md
docs/data/: SaveData.txt
documents/data/: SaveData.txt
src/: constants.cpp  constants.h  main.cpp  main.h  pch.h  test.ixx
src/Classes/: Components.h  ESC.h
src/Classes/Ability/: Ability.cpp  Ability.h
src/Classes/Animation/: Animation.cpp  Animation.h
src/Classes/AutoThread/: AutoThread.h
src/Classes/Battle/: Battle.cpp  Battle.h
src/Classes/Camera/: Camera.cpp  Camera.h
src/Classes/Entity/: Entity.cpp  Entity.h
src/Classes/Factory/: ItemFactory.h  MoveFactory.h  PokemonFactory.h
src/Classes/Game/: BattleFunctions.cpp  Game.cpp  Game.h  OverworldFunctions.cpp  TitleScreenFunctions.cpp
src/Classes/GameComponent/: GameComponent.h
src/Classes/GameObject/: GameObject.cpp  GameObject.h
src/Classes/Graphic/: Graphic.cpp  Graphic.h
src/Classes/GraphicsManager/: GraphicsManager.cpp  GraphicsManager.h
src/Classes/Invoker/: Invoker.h
src/Classes/Item/: BattleItem.cpp  BattleItem.h  Item.cpp  Item.h  ItemList.h  Pokeball.cpp  Pokeball.h  RestoreItem.cpp  RestoreItem.h  StatusItem.cpp  StatusItem.h
src/Classes/KeyManager/: KeyManager.h
src/Classes/Map/: Map.cpp  Map.h
src/Classes/Matrix/: Matrix.h
src/Classes/Move/: Move.cpp  Move.h  Move.ixx  MoveList.h
src/Classes/NPC/: NPC.cpp  NPC.h
src/Classes/Player/: Player.cpp  Player.h
src/Classes/Pokemon/: Pokemon.cpp  Pokemon.h
src/Classes/Singleton/: Singleton.h
src/Classes/SoundPlayer/: SoundPlayer.cpp  SoundPlayer.h
src/Classes/State/: State.h
src/Classes/Stopwatch/: Stopwatch.cpp  Stopwatch.h
src/Classes/TextBox/: TextBox.cpp  TextBox.h
src/Classes/TextureManager/: TextureManager.cpp  TextureManager.h
src/Classes/ThreadPool/: ThreadPool.cpp  ThreadPool.h
src/Classes/Trainer/: Trainer.cpp  Trainer.h
src/Component/Input/: Input.cpp  Input.h
src/Component/Intelligence/: Intelligence.cpp  Intelligence.h
src/Component/Position/: Position.h
src/Component/Resource/: Resource.cpp
src/Component/Sprite/: Sprite.cpp  Sprite.h
src/Constants/: constants.h
src/Data/: Data.cpp  Data.h  ItemList.h  MoveList.h  Pokedex.h  SaveData.txt
src/Data/ItemList/: BattleItems.h  BurnHeal.h  Ether.h  ParalyzeHeal.h  PokeBalls.h  Potion.h  RestoreItems.h  StatusItems.h
src/Data/Items/: Items.h
src/Data/MoveList/: AirSlash.h  AuraSphere.h  DarkPulse.h  Extrasensory.h  Flamethrower.h  FlashCannon.h  FocusBlast.h  IceBeam.h  IronTail.h  Thunder.h  VoltTackle.h  WaterShuriken.h
src/Data/Moves/: AirSlash.cpp  AuraSphere.cpp  MoveList.h
src/Data/Pokemon/: Accelgor.cpp  Alomomola.cpp  Amoonguss.cpp  Archen.cpp  Archeops.cpp  Audino.cpp  Axew.cpp  Basculin.cpp  Beartic.cpp  Beheeyem.cpp  Bisharp.cpp  Blitzle.cpp  Boldore.cpp  Bouffalant.cpp  Braviary.cpp  Carracosta.cpp  Chandelure.cpp  Cinccino.cpp  Cobalion.cpp  Cofagrigus.cpp  Conkeldurr.cpp  Cottonee.cpp  Crustle.cpp  Cryogonal.cpp  Cubchoo.cpp  Darmanitan.cpp  Darumaka.cpp  Deerling.cpp  Deino.cpp  Dewott.cpp  Drilbur.cpp  Druddigon.cpp  Ducklett.cpp  Duosion.cpp  Durant.cpp  Dwebble.cpp  Eelektrik.cpp  Eelektross.cpp  Elgyem.cpp  Emboar.cpp  (+117 more)
src/Entity/: Entity.cpp  Entity.h
src/Entity/Character/: Character.cpp  Character.h
src/Entity/Item/: Item.cpp  Item.h
src/Enums/Direction/: Direction.cpp  Direction.h
src/Enums/StatusCondition/: StatusCondition.cpp  StatusCondition.h
src/Enums/Time/: Time.h
src/Enums/Type/: Type.cpp  Type.h
src/Functions/: AttackFunctions.h  CoreFunctions.h  GameFunctions.h  GeneralFunctions.cpp  GeneralFunctions.h  GeneralFunctions.ixx  ItemFunctions.h
src/Functions/TypeCalculations/: PhysicalTypes.h  SpecialTypes.h  TypeChart.h
src/Graphic/: Graphic.h  Graphics.h
src/Graphic/Rectangle/: Rectangle.cpp  Rectangle.h
src/Graphic/Texture/: Texture.cpp  Texture.h
src/Map/: Map.cpp  Map.h
src/Move/: Move.cpp  Move.h
src/Move/AirSlash/: AirSlash.cpp
src/Move/AuraSphere/: AuraSphere.cpp  AuraSphere.h
src/Move/DarkPulse/: DarkPulse.cpp
src/Move/DragonPulse/: DragonPulse.h
src/Move/FlashCannon/: FlashCannon.cpp  FlashCannon.h
src/Move/FocusBlast/: FocusBlast.cpp
src/Move/HeadSmash/: HeadSmash.h
src/Move/HeatCrash/: HeatCrash.cpp  HeatCrash.h
src/Move/IceBeam/: IceBeam.cpp  IceBeam.h
src/Move/IronTail/: IronTail.cpp
src/Move/Thunder/: Thunder.cpp
src/Move/VoltTackle/: VoltTackle.cpp
src/Namespaces/: EventHandler.h  Stopwatch.h
src/Namespaces/Camera/: Camera.h
src/Namespaces/Factories/: ItemFactory.h  MoveFactory.h  PokemonFactory.h
src/Namespaces/Factory/: ItemFactory.h  MoveFactory.h  PokemonFactory.h
src/Namespaces/KeyManager/: KeyManager.h
src/Namespaces/TextureManager/: TextureManager.h
src/Singleton/: Singleton.h
src/Singleton/Cache/: Cache.h
src/Singleton/Camera/: Camera.cpp  Camera.h
src/Singleton/EventHandler/: EventHandler.h
src/Singleton/Game/: Game.h
src/Singleton/GraphicsEngine/: GraphicsEngine.cpp  GraphicsEngine.h
utility/Constants/: constants.h
utility/Functions/: GeneralFunctions.cpp  GeneralFunctions.h
utility/Sorter/: Sorter.h
utility/Stopwatch/: Stopwatch.cpp  Stopwatch.h
utility/ThreadPool/: ThreadPool.cpp
(+800 files in other folders)
